@@ -367,20 +367,21 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.1.0</version>
+                <version>3.5.3</version>
                 <configuration>
+                    <forkCount>0</forkCount>
                     <includes>
                         <include>**/*Test.java</include>
                     </includes>
-                    <argLine>
-                        --add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
-                        --add-opens=jdk.unsupported/sun.misc=ALL-UNNAMED
-                        --add-opens=java.base/java.nio=ALL-UNNAMED
-                        --add-opens=org.graalvm.truffle/com.oracle.truffle.api=ALL-UNNAMED
-                        --add-opens=org.graalvm.truffle/com.oracle.truffle.polyglot=ALL-UNNAMED
-                        --add-opens=org.graalvm.sdk/org.graalvm.polyglot=ALL-UNNAMED
-                        --add-exports=org.graalvm.truffle/com.oracle.truffle.api=ALL-UNNAMED
-                    </argLine>
+                    <!--<argLine>
+                        &#45;&#45;add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                        &#45;&#45;add-opens=jdk.unsupported/sun.misc=ALL-UNNAMED
+                        &#45;&#45;add-opens=java.base/java.nio=ALL-UNNAMED
+                        &#45;&#45;add-opens=org.graalvm.truffle/com.oracle.truffle.api=ALL-UNNAMED
+                        &#45;&#45;add-opens=org.graalvm.truffle/com.oracle.truffle.polyglot=ALL-UNNAMED
+                        &#45;&#45;add-opens=org.graalvm.sdk/org.graalvm.polyglot=ALL-UNNAMED
+                        &#45;&#45;add-exports=org.graalvm.truffle/com.oracle.truffle.api=ALL-UNNAMED
+                    </argLine>-->
                 </configuration>
             </plugin>
             <plugin>
